# pivot

./: .gitignore  Cargo.toml  README.md
examples/: example-config.yaml
src/: lib.rs  pinit.rs  target.rs  test_util.rs
src/block/: aws_assume_role.rs  aws_profile.rs  error.rs  kubeconfig.rs  mod.rs
src/cmd/pivot/: main.rs  opt.rs
src/config/: aws.rs  error.rs  kubernetes.rs  mod.rs  prompt.rs  v1alpha.rs
src/prompt/: builtin.rs  mod.rs  poverride.rs
src/switch/: error.rs  mod.rs  switcher.rs
src/switch/block/: aws_profile.rs  kubeconfig.rs  mod.rs
src/switch/command/: bash.rs  error.rs  expand.rs  mod.rs
