[package]
name = "pivot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pivot"
path = "src/cmd/pivot/main.rs"

[dependencies]
lazy_static = "1.4.0"
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
shellexpand = "2.1.0"
structopt = "0.3"
thiserror = "1.0"
validator = { version = "0.12", features = ["derive"] }