[package]
name = "pivot"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pivot"
path = "src/cmd/pivot/main.rs"

[dependencies]
fern = { version = "0.6", features = ["colored"] }
lazy_static = "1.4"
log = "0.4"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
shellexpand = "2.1"
structopt = "0.3"
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }